--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -3,8 +3,8 @@
   <tr><h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
   </tr>
   <tr>
-    <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button>
-    <!-- <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button> -->
+    <button type="button" class="btn btn-dark"
+            (click)="goProfil('profil/'+this.service_descriptor.id_user)">Voir le profil</button>
 
   </tr>
 </table>
