--- a/pfirst/src/app/modal-user/modal-user.component.html
+++ b/pfirst/src/app/modal-user/modal-user.component.html
@@ -1,8 +1,7 @@
 <table width="100%">
   <tr>
     <td align="center">
-     <!-- <button type="button" class="btn btn-outline-light" (click)="this.goThenClose('profil/current_user')">Mon profil</button> -->
-      <button type="button" class="btn btn-dark" (click)="myProfil()">Mon profil</button>
+     <button type="button" class="btn btn-outline-light" (click)="this.goThenClose('profil/current_user')">Mon profil</button>
       <br>
       <!--  <button type="button" class="btn btn-dark" (click)="myProfil()" >Mon profil</button><br> -->
     </td>
