debut affichage notif en dur

--- a/pfirst/src/app/info-settings/info-settings.component.html
+++ b/pfirst/src/app/info-settings/info-settings.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4" align="center">Mes informations{{this.email}}</h1>
+    <h1 class="display-4" align="center">Mes informations</h1>
     <table align="center">
 
       <div class="col-sm-8 col-sm-offset-2">
