--- a/pfirst/src/app/modal-history/modal-history.component.html
+++ b/pfirst/src/app/modal-history/modal-history.component.html
@@ -47,3 +47,32 @@
     </table>
   </footer>
 </div>
+<!--   A voir
+<ngb-carousel #carousel [interval]="1000">
+  <ng-template ngbSlide >
+
+    <div id="for-wrapper" *ngIf="showFor">
+      <app-former-service [helperLook]="false"
+                          [pour]="this.history_for[index_for].pour"
+                          [par]="this.history_for[index_for].par"
+                          [categorie]="this.history_for[index_for].categorie"
+                          [note]="this.history_for[index_for].note"
+                          [commentaire]="this.history_for[index_for].commentaire"
+                          [date]="this.history_for[index_for].date">
+      </app-former-service>
+    </div>
+
+    <div id="by-wrapper" *ngIf="showBy">
+      <app-former-service [helperLook]="true"
+                          [pour]="this.history_by[index_by].pour"
+                          [par]="this.history_by[index_by].par"
+                          [categorie]="this.history_by[index_by].categorie"
+                          [note]="this.history_by[index_by].note"
+                          [commentaire]="this.history_by[index_by].commentaire"
+                          [date]="this.history_by[index_by].date">
+      </app-former-service>
+    </div>
+
+  </ng-template>
+</ngb-carousel>
+-->
