--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -51,9 +51,6 @@
         -->
       </td>
       <td>
-        <p style="color:white">route : {{path}} ; hasUrl : <span *ngIf="hasUrl">true</span> </p>
-      </td>
-      <td>
 
       </td>
     </tr>
@@ -79,6 +76,6 @@
     </tr>
   </table>
 </nav>
-<div *ngIf="this.notifs.length>0&&this.authService.isAuthenticated()" id="roundNotifIcon" (click)="openUserModal()">
+<div [@reduceNotif]="stateNotif" *ngIf="this.hasNotif&&this.authService.isAuthenticated()" id="roundNotifIcon" (click)="openUserModal()">
   {{this.notifs.length}}
 </div>
