On peut voir le profil depuis une annonce avec token dans target-URL, à voir sécurité

--- a/pfirst/src/app/global-navbar/global-navbar.component.css
+++ b/pfirst/src/app/global-navbar/global-navbar.component.css
@@ -2,7 +2,11 @@
 {
   width: 150px;
 }
-
+#who{
+  color: #ededed;
+  font-weight: bold;
+  font-size: 25px;
+}
 #roundProfilPic
 {
   border-radius: 50%;
