--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -50,9 +50,13 @@
         </div>
         -->
       </td>
-      <td>
+    </tr>
+  </table>
 
-      </td>
+  <!-- ##### PRENOM AU MILIEU #### -->
+  <table align="v">
+    <tr>
+      <td *ngIf="this.authService.isAuthenticated()" id="who">Bonjour *user* !</td>
     </tr>
   </table>
   <table align="right" id="buttons_connection" cellpadding="5">
