--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -56,7 +56,7 @@
   <!-- ##### PRENOM AU MILIEU #### -->
   <table align="v">
     <tr>
-      <td *ngIf="this.authService.isAuthenticated()" id="who">Bonjour *user* !</td>
+      <td *ngIf="this.authServdice.isAuthenticated()" id="who">Bonjour *user* !</td>
     </tr>
   </table>
   <table align="right" id="buttons_connection" cellpadding="5">
