COURSES : création de la fonction pour envoyer dans le back + model

--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -4,7 +4,7 @@
   </tr>
   <tr>
     <button type="button" class="btn btn-dark"
-            (click)="goProfil('profil/'+this.service_descriptor.id_user)">Voir le profil</button>
+            (click)="goProfil('profil/'+this.service_descriptor.idUser)">Voir le profil</button>
 
   </tr>
 </table>
