--- a/pfirst/src/styles.css
+++ b/pfirst/src/styles.css
@@ -2,11 +2,11 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 
 body{
-  /*background-image: url("/assets/data/all.png");
+/*  background-position-y: 522px ;
   background-repeat: no-repeat;
+  background-image: url("/assets/data/fond.png");*/
+  background-image: url("assets/data/inf.png");
 
-  background-size: cover;*/
-  background-image: url("/assets/data/inf.png");
 
 }
 
