please commit your changes

--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -20,7 +20,7 @@
       </tr>
       <tr>
         <td><h2>Souhaite être accompagné :</h2></td>
-        <td>OUI [codé en dur]</td>
+        <td>{{Accompagne}}</td>
       </tr>
       <tr>
         <td><h2>Liste des courses :</h2></td>
