--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -45,7 +45,7 @@
             <div class="input-group mb-3">
               <label for="budget"><h2>Quel est le montant de votre budget ?</h2></label>
               <div class="input-group-prepend"><span class="input-group-text">€</span></div>
-              <input type="number" class="form-control" id="budget" aria-label="Budget">
+              <input type="string" class="form-control" id="budget" aria-label="Budget">
               <div class="input-group-append"><span class="input-group-text">,00</span></div>
             </div>
           </div>
