--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -19,6 +19,10 @@
         <td>Courses</td>
       </tr>
       <tr>
+        <td><h2>Quand :</h2></td>
+        <td>{{Dispo}}</td>
+      </tr>
+      <tr>
         <td><h2>Souhaite être accompagné :</h2></td>
         <td>{{Accompagne}}</td>
       </tr>
