--- a/pfirst/src/app/new-accompage/new-accompage.component.html
+++ b/pfirst/src/app/new-accompage/new-accompage.component.html
@@ -22,15 +22,15 @@
               <!--#############DISPO######################-->
               <div class= "form-group">
                 <label for="quand"> <h2>Sur quelle plage horaire cela se passerait-il ? </h2></label>
-                <label for="deb-time">Debut</label>
-                <input type="time" id="quand" name="quand1">
-                <label for="fin-time">Fin</label>
-                <input type="time" id="quand" name ="quand2">
+                <label for="quand1">Debut</label>
+                <input type="time" id="quand1" class="form-control" formControlName="quand1" >
+                <label for="quand2">Fin</label>
+                <input type="time" id="quand2" class="form-control" formControlName="quand2" >
               </div>
 
               <div class= "form-group">
-                <label for="date"> <h2>Quel date cela vous conviendrez-t-il></h2></label>
-                <input type="date" id="dispo" name="date">
+                <label for="datejour"> <h2>Quel date cela vous conviendrez-t-il></h2></label>
+                <input type="date" id="datejour" class="form-control" formControlName="datejour" >
               </div>
 
               <div class="form-group">
