--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -21,10 +21,10 @@
         <div class="form-group">
           <div class="jumbotron" id="formulaire">
             <div class="form-group">
-              <label for="date"><h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2>
+              <label for="datejour"><h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2>
               </label>
-              <input type="datetime" id="date" name="date">
-              <input type="time" id="date" name="date2">
+              <input type="datetime-local" id="datejour" class="form-control" formControlName="datejour" >
+              <!--<input type="time" id="date" name="date2"> -->
             </div>
 
           </div>
@@ -44,11 +44,14 @@
           <div class="jumbotron" id="formulaire">
             <div class="input-group mb-3">
               <label for="budget"><h2>Quel est le montant de votre budget ?</h2></label>
-              <div class="input-group-prepend"><span class="input-group-text">€</span></div>
-              <input type="string" class="form-control" id="budget" aria-label="Budget">
-              <div class="input-group-append"><span class="input-group-text">,00</span></div>
+              
+              <span class="input-group-text">€</span>
+              <input type="text" id="budget" class="form-control" formControlName="budget">
+              <span class="input-group-text">,00</span>
             </div>
           </div>
+
+
           <!--#############LISTE DE COURSES######################-->
           <div class="jumbotron" id="formulaire">
             <div class="form-group">
