--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -44,7 +44,7 @@
     <table width="1500px">
       <tr align="center">
         <td width="100%" align="center">
-          <app-services-experience></app-services-experience>
+          <app-services-experience [id_user]="this.id"></app-services-experience>
         </td>
       </tr>
     </table>
