Accès au info user depuis les services [problème réglé]

--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -42,4 +42,10 @@
       <a  class="btn btn-primary" routerLink="/propose">Retour à la liste</a>
     </div>
   </div>
+
+  <table align="center">
+    <button id="button_rendre" type="button" class="btn btn-warning">Aider {{User}} !</button>
+  </table>
 </div>
+
+
