--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -20,7 +20,7 @@
       </tr>
       <tr>
         <td><h2>Quand :</h2></td>
-        <td>{{Dispo}}</td>
+        <td>{{DispoJour}} a {{DispoHeure}}</td>
       </tr>
       <tr>
         <td><h2>Souhaite être accompagné :</h2></td>
