--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -32,7 +32,7 @@
       </tr>
       <tr>
         <td><h2>Quand ?</h2></td>
-        <td>{{Dispo}}</td>
+        <td>{{DispoJour}} a {{DispoHeure}}</td>
       </tr>
       <tr>
         <td><h2>Commentaire</h2>{{Description}}</td>
