--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -22,6 +22,10 @@
         <td>Menage</td>
       </tr>
       <tr>
+        <td><h2>Quand ?</h2></td>
+        <td>{{Date}} a {{Heure}}</td>
+      </tr>
+      <tr>
         <td><h2>Salle a nettoyer :</h2></td>
         <td>{{Salle}}</td>
       </tr>
