--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -23,8 +23,11 @@
             <div class="form-group">
               <label for="datejour"><h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2>
               </label>
-              <input type="datetime-local" id="datejour" class="form-control" formControlName="datejour" >
-              <!--<input type="time" id="date" name="date2"> -->
+              <label for="datejour">Jour</label>
+              <input type="date" id="datejour" class="form-control" formControlName="datejour" >
+              <label for="dateheure">Heure</label>
+                <input type="time" id="dateheure" class="form-control" formControlName="dateheure" >
+              
             </div>
 
           </div>
