--- a/pfirst/src/app/new-cuisine/new-cuisine.component.html
+++ b/pfirst/src/app/new-cuisine/new-cuisine.component.html
@@ -10,11 +10,15 @@
                   </div>
 
 
-                  <div class= "form-group">
-                    <label for="datejour"> <h2>Quand souhaitez vous que quelqu'un vienne vous aider pour la cuisine ? (Date et heure)</h2></label>
-                    <input type="datetime-local" id="datejour" class="form-control" formControlName="datejour" >
+                <div class= "form-group">
+                    <label for="datejour">Jour</label>
+                    <input type="date" id="datejour" class="form-control" formControlName="datejour" >
+                    <label for="dateheure">Heure</label>
+                    <input type="time" id="dateheure" class="form-control" formControlName="dateheure" >
                   </div>
-
+                  
+                  
+                    
                   <div class= "form-group">
                     <label for="sur_place"><h2>Voulez-vous que la cuisine soit faite chez vous ou que l'on vous l'emporte ?</h2></label>
                     <select id="accompagne" class="form-control" formControlName="accompagne">
