--- a/pfirst/src/app/new-menage/new-menage.component.html
+++ b/pfirst/src/app/new-menage/new-menage.component.html
@@ -14,7 +14,10 @@
               <!--#############DISPO######################-->
               <div class= "form-group">
                 <label for="datejour"> <h2>Quand souhaitez vous que quelqu'un vienne vous aider a faire le menage (Date et heure)</h2></label>
-                <input type="datetime-local" id="datejour" class="form-control" formControlName="datejour" >
+                <label for="datejour">Jour</label>
+              <input type="date" id="datejour" class="form-control" formControlName="datejour" >
+              <label for="dateheure">Heure</label>
+                <input type="time" id="dateheure" class="form-control" formControlName="dateheure" >
               </div>
 
               <div class="input-group mb-3">
