Fonction pour attribuer un service à celui qui propose son aide #2

--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -44,7 +44,8 @@
   </div>
 
   <table align="center">
-    <button id="button_rendre" type="button" class="btn btn-warning">Aider {{User}} !</button>
+    <button id="button_rendre" type="button" class="btn btn-warning"><p style="font-size: larger">Aider {{User}} !</p>
+    </button>
   </table>
 </div>
 
