--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -1,4 +1,5 @@
-<div class="col-md-7">
+<div class="col-md-7" id="services-list">
+  <h2 id="demandeTexte">Vos demandes en cours</h2>
   <div class="row">
     <ul class="list-group">
       <div *ngFor ="let service of this.proposed_services,  let i =index,">
