--- a/pfirst/src/app/global-navbar/global-navbar.component.css
+++ b/pfirst/src/app/global-navbar/global-navbar.component.css
@@ -29,6 +29,20 @@
   z-index: 2;
 }
 
+.roundNotifIcon
+{
+  position: absolute;
+  top:20px;
+  left: 250px;
+  text-align: center;
+  color: white;
+  min-width: 20px;
+  border-radius: 10%;
+  background-color: red;
+  z-index: 2;
+}
+
+
 
 .backdropClass
 {
