apparition notif, mauvaise branch

--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -91,6 +91,8 @@
 <div class="roundNotifIcon" [ngStyle]="semi">1</div>
 <div class="roundNotifIcon" [ngStyle]="almost">1</div>
 <div class="roundNotifIcon" [ngStyle]="rotated">1</div>
--->
 
+<div style="background-color: red" [@translation]="stateTranslate" (click)="stateTranslate = 'toLeft'">0000</div>
+
+-->
 
