--- a/pfirst/src/app/info-settings/info-settings.component.html
+++ b/pfirst/src/app/info-settings/info-settings.component.html
@@ -27,13 +27,16 @@
             </div>
 
             <div class="jumbotron" id="formulaire">
-              <label for="profil-pic">Votre photo de profil</label>
-              <input type="file" class="form-control" id="profil-pic" name="profil-pic"
+              <label for="profil-pic">
+                <span *ngIf="this.notifs.profilPic == ''">Votre photo de profil</span>
+                <span style="color: red" *ngIf="this.notifs.profilPic != ''">{{this.notifs.profilPic}}</span>
+              </label>
+              <input type="file" class="form-control" id="profil-pic" name="profil-pic"(change)="onFileSelected($event)"
                      ngModel>
               <img src="../../assets/data/photo_undefined.png">
               <span>(en dur)</span>
             </div>
-           <button class="btn btn-primary" type="submit">Valider</button>
+           <button style="margin-left: 330px" class="btn btn-primary" type="submit">Valider</button>
           </div>
         </form>
         <!--
